[MODORDERS-1403]. Change how defaultNewAmountOnUnrelease defaults on negative newAmount